tests/errors/sem5.kt
fun main() {
    x = 5; // undeclared
}